# openc3-cosmos-tsdb-migration

./: README.md  Rakefile  openc3-cosmos-tsdb-migration-1.0.0.gem  openc3-cosmos-tsdb-migration-1.0.1.gem  openc3-cosmos-tsdb-migration.gemspec  plugin.txt  pyproject.toml
.github/workflows/: release-cosmos-plugin.yml
microservices/TSDB_MIGRATION/: bin_file_processor.py  tsdb_migration.py
test/: conftest.py  test_bin_file_processor.py
