[project]
name = "openc3-cosmos-tsdb-migration"
version = "1.0.1"
description = "Migration microservice for ingesting historical bin file data into QuestDB"
authors = [
  {name = "Support", email = "support@openc3.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openc3",  # Includes questdb, psycopg, redis, boto3, pytest
    "valkey (>=6.1.1,<7.0.0)",
]
package-mode = false

[project.scripts]
migration = "migration_microservice:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E402","E501","F402","F403","F405"]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
